grazing (0.0.1) UNRELEASED; urgency=medium

  * Initial release.
  * Created github repository https://github.com/ricardoyanez/grazing
  * Downloaded GRAZING_9 from http://personalpages.to.infn.it/~nanni/grazing/
  * Environmental variables GRAZ_MASS_EXP, GRAZ_MASS_NIX and GRAZ_FILE_BE23 define the location of data files. This supercedes the paths defined in grazing_file.inc

 -- Ricardo Yanez <ricardo.yanez@calel.org>  Tue, 11 Oct 2022 11:51:04 -0700