@@ -21,9 +21,13 @@ The data files are defined through environmental variables. This supercedes the 
 In .bashrc,
 
 GRAZ_DIR=[path to GRAZING data directory]
+
 GRAZ_MASS_EXP=/$GRAZ_DIR/massexp_2004.dat
+
 GRAZ_MASS_NIX=/$GRAZ_DIR/mtablex_2004.dat
+
 GRAZ_FILE_BE23=/$GRAZ_DIR/be23.dat
+
 export GRAZ_MASS_EXP GRAZ_MASS_NIX GRAZ_FILE_BE23
 
-I personally put the data files is /usr/local/share/grazing/
+I personally put the data files in /usr/local/share/grazing/
